--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -96,3 +96,11 @@
 .edditionalInformationListItem:hover {
   text-decoration: none;
 }
+
+.up {
+  background-color: blue;
+  font-size: 30px;
+  color: white;
+  border: 10px solid blue;
+  border-radius: 50%;
+}
