--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,5 +1,5 @@
 .title {
-  margin-left: 30px;
+  margin: 0 30px;
   padding: 30px 0;
 }
 
@@ -7,4 +7,12 @@
   font-size: 26px;
   text-align: center;
   color: red;
+}
+
+.up {
+  background-color: blue;
+  font-size: 30px;
+  color: white;
+  border: 10px solid blue;
+  border-radius: 50%;
 }
